--- a/mario_game1.css
+++ b/mario_game1.css
@@ -10,17 +10,6 @@ h1{
   color: #2c404c
 }
 
-td{
-  border: solid black;
-  text-align: center;
-}
-
-p{
-  font-family: 'GermanoRegular';
-  font-weight: bolder;
-  font-style: normal;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -50,6 +39,10 @@ li a:hover:not(.active) {
     background-color: #111;
 }
 
+.active {
+    background-color: ;
+}
+
 li{
   font-family: 'GermanoRegular'; 
    font-weight: bold; 
@@ -57,27 +50,23 @@ li{
   color:white
 }
 
-.center{
+h3{
+  display: ;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%
+}
+
+p{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 20%
+  width:50% ;
 }
 
- /* td{
+h1{
   display: ;
   margin-left: auto;
   margin-right: auto;
   width: 20%
-}
-
-.active{
-  display: ;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-} */ */
-td{
-  border: solid black;
-  text-align: center;
 }
